--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                             <div class="travel__sub sub-title item">世界中を旅しよう</div>
                                             <div class="travel__description item">
                                                 <p>
-                                                    世界１５０ヶ国で<br />利用できる民泊サービスです。
+                                                    世界１５０ヶ国で<br />利用できる宿泊施設案内サービスです。
                                                 </p>
                                                 <p>あなたの望む宿がきっと見つかります。</p>
                                             </div>
